# LMPlayground

./: build.gradle.kts
app/: build.gradle.kts
app/src/main/cpp/: CMakeLists.txt  ggml_fopen_override.c
app/src/main/java/com/druk/lmplayground/: MainActivity.kt
app/src/main/java/com/druk/lmplayground/conversation/: ConversationBar.kt  ConversationFragment.kt  ConversationViewModel.kt
app/src/main/java/com/druk/lmplayground/models/: ModelInfo.kt  ModelInfoProvider.kt  SelectModelDialog.kt
app/src/main/java/com/druk/lmplayground/settings/: SettingsFragment.kt  SettingsScreen.kt
app/src/main/java/com/druk/lmplayground/storage/: ModelFile.kt  ModelsFragment.kt  ModelsScreen.kt  StorageManagementFragment.kt  StorageManagementScreen.kt  StoragePreferences.kt  StorageRepository.kt  StorageViewModel.kt
app/src/main/res/navigation/: mobile_navigation.xml
app/src/main/res/values/: strings.xml
gradle/: libs.versions.toml
